# project-accounts

./: Cargo.toml  Main.Dockerfile  docker-compose.yml  start.sh
src/: api.rs  main.rs  origin_control.rs  safe_user.rs  user.rs  utils.rs
src/debugging/: debug_routes.rs
src/resources/: dict.rs
